data/usersCode/dafsvrtv/question1/error.txt
/home/gauravghati/clash/data/usersCode/dafsvrtv/question1/code1-0.cpp:1:1: error: ‘fsdvwet’ does not name a type
 fsdvwet wervwecrwerv
 ^~~~~~~
